--- a/index.html
+++ b/index.html
@@ -7,6 +7,25 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header>
+        <div class="container header__container">
+            <a href="index.html" class="header__logo-silka">Jessie.</a>
+            <ul class="header__list">
+                <li class="header__item">
+                    <a href="index.html" class="header__silka active">Portfolio</a>
+                </li>
+                <li class="header__item">
+                    <a href="" class="header__silka">Blog</a>
+                </li>
+                <li class="header__item">
+                    <a href="" class="header__silka">Client reviews</a>
+                </li>
+                <li class="header__item">
+                    <a href="" class="header__silka">Contact me</a>
+                </li>
+            </ul>
+            <button class="header__btn">Schedule a call</button>
+        </div>
+    </header>
 </body>
 </html>
