finish finall part

--- a/index.html
+++ b/index.html
@@ -27,5 +27,51 @@
             <button class="header__btn">Schedule a call</button>
         </div>
     </header>
+
+    <main>
+        <section class="hero">
+            <div class="container hero__container">
+                <div class="hero__left">
+                    <h3 class="hero__subtitle">Pro <br> photographer</h3>
+                    <span class="hero__services">
+                        <hr class="hero__line">
+                        <p class="hero__services-text">Let’s take your <br> photographs to next level</p>
+                    </span>
+                </div>
+                <div class="hero__right">
+                    <div class="hero__Jessie">
+                        <p class="hero__text">Hello there, Nice to meet you. I am</p>
+                        <h2 class="hero__title">Jessie</h2>
+                        <p class="hero__info">Amet minim mollit non deserunt ullamco est sit aliqua dolor do <br> amet sint. Velit officia consequat duis enim velit mollit. <br> Exercitation veniam consequat sunt nostrud amet. Amet minim <br> mollit non deserunt ullamco est sit aliqua dolor do amet sint.</p>
+                    </div>
+                    <div class="hero__shots">
+                        <span class="hero__minibox">
+                            <h4 class="shots">Latest shots</h4>
+                            <a href="" class="hero__silka">View all</a>
+                        </span>
+                        <ul class="hero__list">
+                            <li class="hero__item">
+                                <img src="imges/hero-img-1.png" alt="" class="hero__img">
+                            </li>
+                            <li class="hero__item">
+                                <img src="imges/hero-img-2.png" alt="" class="hero__img">
+                            </li>
+                            <li class="hero__item">
+                                <img src="imges/hero-img-3.png" alt="" class="hero__img-last">
+                            </li>
+                        </ul>
+                        <span class="hero__movement">
+                            <button class="hero__btn">
+                                <img src="imges/arrow-left.png" alt="" class="hero__arrow-img" width="28" height="28">
+                            </button>
+                            <button class="hero__btn">
+                                <img src="imges/arrow-right.png" alt="" class="hero__arrow-img" width="28" height="28">
+                            </button>
+                        </span>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
