finished portfolio part, fixed some mistakes

--- a/index.html
+++ b/index.html
@@ -73,5 +73,25 @@
             </div>
         </section>
     </main>
+
+    <main>
+        <section class="portfolio">
+            <div class="container portfolio__container">
+                <hr class="portfolio__line">
+                <p class="portfolio__text">The site was created by SoloMan-cool</p>
+                <div class="portfolio__box">
+                    <a href="https://github.com/SoloMan-cool" class="portfolio__silka">
+                        <img src="imges/git-logo.png" alt="" class="portfolio__img">
+                    </a>
+                    <a href="t.me/Solo_man2" class="portfolio__silka">
+                        <img src="imges/telegram-icon.webp" alt="" class="portfolio__img">
+                    </a>
+                    <a href="https://www.instagram.com/kom.olchik8/profilecard/?igsh=YnV3NTh4NmpxM2di" class="portfolio__silka">
+                        <img src="imges/instagram.svg" alt="" class="portfolio__img">
+                    </a>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
